fix: fix accordion wrapping

--- a/src/components/Accordion.module.scss
+++ b/src/components/Accordion.module.scss
@@ -76,6 +76,7 @@
       text-align: left;
       text-transform: uppercase;
       transition: color $tabHeader-time;
+      white-space: nowrap;
     }
   }
 
